# fastapi_init

./: README.md  __init__.py  cookiecutter.json
{{cookiecutter.project_name}}/: README.md  main.py  pyproject.toml  requirements.txt
{{cookiecutter.project_name}}/apps/: Application.py  __init__.py
{{cookiecutter.project_name}}/apps/api/: ApiRouter.py  __init__.py
{{cookiecutter.project_name}}/apps/api/controller/: IndexView.py  __init__.py
{{cookiecutter.project_name}}/apps/api/models/: __init__.py  index_model.py
{{cookiecutter.project_name}}/apps/api/schemas/: index_schema.py
{{cookiecutter.project_name}}/apps/api/service/: __init__.py  index_crud.py
{{cookiecutter.project_name}}/apps/core/: __init__.py
{{cookiecutter.project_name}}/apps/core/base/: BaseSettings.py
{{cookiecutter.project_name}}/apps/core/config/: dev_env.py  pro_env.py
{{cookiecutter.project_name}}/apps/core/db/: __init__.py  database.py
{{cookiecutter.project_name}}/apps/core/middleware/: __init__.py
{{cookiecutter.project_name}}/apps/resource/data/: fastapi.db
{{cookiecutter.project_name}}/apps/tests/: test_main.http
{{cookiecutter.project_name}}/apps/utils/: __init__.py  http_status.py  logger.py  response.py
{{cookiecutter.project_name}}/scripts/: __init__.py
